--- a/src/main/resources/templates/homePage/fragments/cardCourse.html
+++ b/src/main/resources/templates/homePage/fragments/cardCourse.html
@@ -13,11 +13,11 @@
                     <div class="card-body pb-0">
                         <!-- Badge and favorite -->
                         <div class="d-flex justify-content-between mb-2">
-                            <a href="#" class="badge bg-purple bg-opacity-10 text-purple">All level</a>
+                            <a href="#" class="badge bg-purple bg-opacity-10 text-purple" th:text="${course.courseLevel}">All level</a>
                             <a href="#" class="h6 mb-0"><i class="far fa-heart"></i></a>
                         </div>
                         <!-- Title -->
-                        <h5 class="card-title fw-normal"><a href="#" th:text="${course.title}">Sketch from A to Z: for
+                        <h5 class="card-title fw-normal"><a th:href="@{'/home/course-detail?id=' + ${course.courseId}}" th:text="${course.title}">Sketch from A to Z: for
                                 app
                                 designer</a></h5>
                         <p class="mb-2 text-truncate-2" th:text="${course.description}">Proposal indulged no do sociable
